--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-.precomp/
-/HTMX-*
+.DS_Store
+.precomp
+.lib/precomp
+.swp
+.ipynb_checkpoints/*
+.log
+.p6.swp
+.pm6.swp
+.Dockerfile.swp
+.json.swp
+.yaml.swp
+.pem
