--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,10 @@
 name = HTMX
 
-[ReadmeFromPod]
-filename = lib/HTMX.rakumod
-
 [UploadToZef]
+
+;FIXME uncomment after README.md is moved to HTMX.rakumod POD6
+;[ReadmeFromPod]
+;filename = lib/HTMX.rakumod
 
 [Badges]
 provider = github-actions/test.yml
