move out HTML::Functional

--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,8 @@ name = HTMX
 
 [UploadToZef]
 
-;FIXME uncomment after README.md is moved to HTMX.rakumod POD6
 ;[ReadmeFromPod]
-;filename = lib/HTMX.rakumod
+;filename = lib/xxx
 
 [Badges]
 provider = github-actions/test.yml
