--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 .DS_Store
 .precomp
 .lib/precomp
-.swp
+*.swp
 .ipynb_checkpoints/*
 .log
-.p6.swp
-.pm6.swp
-.Dockerfile.swp
-.json.swp
-.yaml.swp
 .pem
-.iml
+.idea/
+*.iml
