start click-to-load

--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,11 @@ name = HTMX
 
 [UploadToZef]
 
-;FIXME uncomment after README.md is moved to HTMX.rakumod POD6
-;[ReadmeFromPod]
+[ReadmeFromPod]
 ;filename = lib/HTMX.rakumod
+
+; if you want to disable generating README.md from main module's pod, then:
+enabled = false
 
 [Badges]
 provider = github-actions/test.yml
